[tool.poetry]
name = "reactembed"
version = "0.1.0"
description = "React Embed Project"
authors = ["JT"]
packages = [
    { include = "reactembed" }
]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
python-dotenv = "^1.1.0"
requests = "^2.32.4"
beautifulsoup4 = "^4.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
